--- a/projetbab.html
+++ b/projetbab.html
@@ -35,6 +35,7 @@
                                     <li>
                                         <a href="index2.html">Adresse et contact</a>
                                     </li>
+                                    <li>email et profil</li>
                                 </ul>
                             </nav>
                         </div>
